modificando margenes y paddings

--- a/src/pages/hogar.html
+++ b/src/pages/hogar.html
@@ -28,7 +28,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../src/styles/main.scss">
+    <link rel="stylesheet" href="../../src/styles/main.css">
   </head>
   <body data-dark>
     <header class="header" data-dark>
@@ -150,7 +150,7 @@
       </section>
     </main>
 
-    <section class="steps border-top-dark-theme" data-dark>
+    <section class="steps" data-dark data-dark-border-top>
       <h2 class="text-center">Cotizá tu seguro en simples pasos!</h2>
       <p class="text-center">
         100% Online y super fácil. Te asesoramos al instante.
@@ -187,7 +187,7 @@
       </div>
     </section>
 
-    <section class="compare-insurance-container border-top-dark-theme" data-dark>
+    <section class="compare-insurance-container" data-dark data-dark-border-top>
       <h2 class="text-center">Compará tu seguro!</h2>
 
       <div class="compare-insurance">
@@ -233,7 +233,7 @@
       </div>
     </section>
 
-    <section class="clients border-top-dark-theme" data-dark>
+    <section class="clients" data-dark data-dark-border-top>
       <h2 class="text-center">¿Qué opinan nuestros clientes?</h2>
 
       <div class="opinions-container">
