--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
       </section>
     </main>
 
-    <section class="steps border-top-dark-theme" data-dark>
+    <section class="steps" data-dark data-dark-border-top>
       <h2 class="text-center">Cotizá tu seguro en simples pasos!</h2>
       <p class="text-center">
         100% Online y super fácil. Te asesoramos al instante.
@@ -334,7 +334,7 @@
       </div>
     </section>
 
-    <section class="compare-insurance-container border-top-dark-theme" data-dark>
+    <section class="compare-insurance-container" data-dark data-dark-border-top>
       <h2 class="text-center">Compará tu seguro!</h2>
 
       <div class="compare-insurance">
@@ -380,7 +380,7 @@
       </div>
     </section>
 
-    <section class="clients border-top-dark-theme" data-dark>
+    <section class="clients" data-dark data-dark-border-top>
       <h2 class="text-center">¿Qué opinan nuestros clientes?</h2>
 
       <div class="opinions-container">
