modificando nav y links

--- a/src/pages/art.html
+++ b/src/pages/art.html
@@ -242,19 +242,19 @@
         </div>
 
         <div class="social-media">
-          <a href="">
+          <a href="https://www.facebook.com/puglieseyasociados" target="_blank">
             <span class="jam jam-facebook"></span>
           </a>
 
-          <a href="">
+          <a href="https://www.instagram.com/puglieseasociados/" target="_blank">
             <span class="jam jam-instagram"></span>
           </a>
 
-          <a href="">
+          <a href="https://api.whatsapp.com/send?phone=5491162375508" target="_blank">
             <span class="jam jam-whatsapp"></span>
           </a>
 
-          <a href="">
+          <a href="mailto:puglieseyasociados1@gmail.com" target="_blank">
             <span class="jam jam-envelope"></span>
           </a>
         </div>
