--- a/src/pages/cliente.html
+++ b/src/pages/cliente.html
@@ -81,10 +81,10 @@
         <div class="support mg-top">
           <img src="../images/contact-img.svg" alt="Imagen de contacto">
           <div class="support-social-media">
-            <a href=""><span class="jam jam-facebook"></span> Facebook</a>
-            <a href=""><span class="jam jam-whatsapp"></span> Instagram</a>
-            <a href=""><span class="jam jam-instagram"></span> Whatsapp</a>
-            <a href=""><span class="jam jam-envelope"></span> Correo electrónico</a>
+            <a href="https://www.facebook.com/puglieseyasociados"><span class="jam jam-facebook"></span> Facebook</a>
+            <a href="https://www.instagram.com/puglieseasociados/"><span class="jam jam-whatsapp"></span> Instagram</a>
+            <a href="https://api.whatsapp.com/send?phone=5491162375508"><span class="jam jam-instagram"></span> Whatsapp</a>
+            <a href="mailto:puglieseyasociados1@gmail.com"><span class="jam jam-envelope"></span> Correo electrónico</a>
           </div>
         </div>
 
@@ -243,19 +243,19 @@
         </div>
 
         <div class="social-media">
-          <a href="">
+          <a href="https://www.facebook.com/puglieseyasociados" target="_blank">
             <span class="jam jam-facebook"></span>
           </a>
 
-          <a href="">
+          <a href="https://www.instagram.com/puglieseasociados/" target="_blank">
             <span class="jam jam-instagram"></span>
           </a>
 
-          <a href="">
+          <a href="https://api.whatsapp.com/send?phone=5491162375508" target="_blank">
             <span class="jam jam-whatsapp"></span>
           </a>
 
-          <a href="">
+          <a href="mailto:puglieseyasociados1@gmail.com" target="_blank">
             <span class="jam jam-envelope"></span>
           </a>
         </div>
